Documentation fully translated into portuguese

--- a/docs/components/doc-sections/en/connectors.html
+++ b/docs/components/doc-sections/en/connectors.html
@@ -473,7 +473,7 @@
 
     <h3> <a id="conn_free"> Free </a> </h3>
     <p>
-        The file easy.free.js is a connector struture that is used to create another connectors, meaning that any one
+        The file easy.free.js is a connector structure that is used to create another connectors, meaning that any one
         can create his own connector based on this file.
     </p>
 </section>
