--- a/docs/components/doc-sections/pt/connectors.html
+++ b/docs/components/doc-sections/pt/connectors.html
@@ -300,7 +300,7 @@
     <h4> <a id="conn_c_fill"> e-fill with e-id </a> </h4>
     <p>
         Executa a requisição getOne de acordo com o caminho fornecido e renderiza o resultado depois da requisição
-        terminar. A sintaxe é <i class="note mark-el">e-fill="caminho"</i>. Mas, ela precisa ser combinada com <i
+        terminar. A sintâxe é <i class="note mark-el">e-fill="caminho"</i>. Mas, ela precisa ser combinada com <i
             class="note mark-el">e-id</i> que terá o valor do parâmetro `id`. <br>
         <span class="note warn-border">O atributo <i class="mark-el">e-id</i> é obrigatório.</span>.
     </p>
