--- a/docs/components/doc-sections/pt/delimiters.html
+++ b/docs/components/doc-sections/pt/delimiters.html
@@ -3,7 +3,7 @@
         title="Help us improve this documentation on github!" class="edit-content"><span
             class="fa fa-pencil"></span></a>
 
-    <h1> <a id="delimiters"> Delimiters </a> </h1>
+    <h1> <a id="delimiters"> Delimitadores (Delimiters) </a> </h1>
 
     <p>
         Por padrão, o Easy traz dois tipos de delimitadores, que são: <span class="note">easy</span> delimiter e o
