--- a/docs/components/doc-sections/pt/events.html
+++ b/docs/components/doc-sections/pt/events.html
@@ -199,7 +199,7 @@
     <h3> <a id="events_modifiers"> Modifiers </a> </h3>
     <p>
         Para adicionar modificadores aos eventos, use <span class="note mark-el">.</span> (ponto) depois do nomeEvento.
-        A sintaxe é <span class="note mark-el">on:nomeEvento.modificador1.modificador2="expressão"</span>
+        A sintâxe é <span class="note mark-el">on:nomeEvento.modificador1.modificador2="expressão"</span>
     </p>
 
     <p>
