--- a/docs/components/doc-sections/en/routing.html
+++ b/docs/components/doc-sections/en/routing.html
@@ -1,6 +1,7 @@
 <section class="section">
-    <a href="https://github.com/AfonsoMatElias/easy/blob/6a729b7284758c6064eaadb4dc6b23fde4081aaf/docs/components/doc-sections/en/routing.html" 
-    title="Help us improve this documentation on github!" class="edit-content"><span class="fa fa-pencil"></span></a>
+    <a href="https://github.com/AfonsoMatElias/easy/blob/6a729b7284758c6064eaadb4dc6b23fde4081aaf/docs/components/doc-sections/en/routing.html"
+        title="Help us improve this documentation on github!" class="edit-content"><span
+            class="fa fa-pencil"></span></a>
 
     <h1> <a id="routing"> Routing </a> </h1>
     <p>
@@ -51,21 +52,21 @@
             At this point we are going to assume that you already know what's component nameId is.
         </li>
         <li> <span class="note mark-el">nameId.title</span> &ndash; represents the title that will be
-            setted to the page after the component has been added to the DOM (It is optional).</li>
+            setted to the page after the component has been rendered (It is optional).</li>
 
-        <li> <span class="note mark-el">nameId.route</span> &ndash; represents the route that
-            will be setted to the page after the component has been added to the DOM (It is
-            optional). </li>
+        <li> <span class="note mark-el">nameId.route</span> &ndash; represents the navegation route (It is mandatory on
+            rounting topic). </li>
 
-        <li> <span class="note mark-el">nameId.isDefault</span> &ndash; set the compoment as the default
+        <li> <span class="note mark-el">nameId.isDefault</span> &ndash; set the component as the default
             route of the app.</li>
 
-        <li> <span class="note mark-el">nameId.isNotFound</span> &ndash; set the compoment as the not found
+        <li> <span class="note mark-el">nameId.isNotFound</span> &ndash; set the component as the not found
             route of the app.</li>
 
-        <li> <span class="note mark-el">nameId.children</span> &ndash; represents the children of this compoment.</li>
-        
-        <li> <span class="note mark-el">nameId.keepAlive</span> &ndash; allow the component to keep alive the old state.</li>
+        <li> <span class="note mark-el">nameId.children</span> &ndash; represents the children of this component.</li>
+
+        <li> <span class="note mark-el">nameId.keepAlive</span> &ndash; allow the component to keep alive the old state.
+        </li>
     </ul>
 
     <label>HTML</label>
@@ -105,17 +106,17 @@
     <p>
         Whenever routing is used, it is mandatory to define the standard route (standard component)
         so that it can be loaded immediately. To do so, just set the
-        <i class="note mark-el">isDefault:true</i> property in the component registering.
+        <i class="note mark-el">isDefault:true</i> property in the component registered.
     </p>
 
     <p>
         In the case of page <b>404</b>, we can set the <i class="note mark-el">isNotFound:true</i> property,
-        telling Easy that if there is no component with this route, insert this page.
+        telling Easy that if there is no component with this route, insert this component.
     </p>
 
     <div class="block-note dont">
         <p>
-            Two or more components cannot be defined with with <i class="note">isDefault</i> or
+            Two or more components cannot be defined with <i class="note">isDefault</i> or
             <i class="note">isNotFound</i>, if you do, an error will be thrown in saying
             `<i class="color-red">It is not allowed to define more than one 'default'/'notFound' page...</i>`.
         </p>
@@ -155,7 +156,7 @@
     <h3> <a id="routing_nesting"> Nesting Routes </a> </h3>
     <p>
         Children can be added to each component, this in the children property, and so we can nest routes...
-        The property expects an component element object having the child's nameId and its object.
+        The property expects a component element object having the child's nameId and it's object.
     </p>
 
     <div e-ignore class="code-container" code-ext=".js">
@@ -195,7 +196,7 @@
 
     <h3> <a id="routing_params"> Route Params </a> </h3>
     <p>
-        To define a parameter on the route, we use: paramName and to extract the data of the route's parameters,
+        To define a parameter on the route, we use `:paramName` and to extract the data of the route's parameters,
         we use <i class="note mark-el">this.getParams()</i> in the component instance, returning an object
         containing all the parameters of the route.
     </p>
@@ -203,7 +204,7 @@
     <div e-ignore class="code-container" code-ext=".html">
         <textarea cm-lang="text/html">
     <div>
-        <!-- Compoment Content -->
+        <!-- Component Content -->
     </div>
     <script>
         this.loaded = function (el) {
@@ -226,7 +227,7 @@
             make that no hash will be added the navegation anchors. </li>
 
         <li> Add the <i class="note mark-el">base</i> tag in the page head &ndash; the base need to be added with the
-            same value as compoment <i class="note">config.base</i>. That specify the base URL to use for all relative
+            same value as component <i class="note">config.base</i>. That specify the base URL to use for all relative
             URLs in a document.
             <a class="mark-el" href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base" target="_blank"
                 rel="noopener noreferrer">Click me for more base tag info</a>. </li>
