--- a/docs/components/doc-sections/pt/routing.html
+++ b/docs/components/doc-sections/pt/routing.html
@@ -1,19 +1,20 @@
 <section class="section">
-    <a href="https://github.com/AfonsoMatElias/easy/blob/6a729b7284758c6064eaadb4dc6b23fde4081aaf/docs/components/doc-sections/en/routing.html" 
-    title="Help us improve this documentation on github!" class="edit-content"><span class="fa fa-pencil"></span></a>
+    <a href="https://github.com/AfonsoMatElias/easy/blob/6a729b7284758c6064eaadb4dc6b23fde4081aaf/docs/components/doc-sections/en/routing.html"
+        title="Help us improve this documentation on github!" class="edit-content"><span
+            class="fa fa-pencil"></span></a>
 
-    <h1> <a id="routing"> Routing </a> </h1>
+    <h1> <a id="routing"> Roteamento (Routing) </a> </h1>
     <p>
-        The routing funcionality that enable the <b>Single Page Application</b> mode, and creating a SPA with
-        <i class="note">Easy</i> is very simple, because it uses
-        <a class="note mark-el">includer</a> elements.
+        O roteamento é uma funcionalidade que habilita o modo <b>SPA (Single Page Application)</b>, e para criar um SPA
+        com o <i class="note">Easy</i> é muito simples, porque ele uso os elementos do <a
+            class="note mark-el">includer</a>.
     </p>
 
-    <h3> <a id="routing_setting"> Setting </a> </h3>
+    <h3> <a id="routing_setting"> Configurando (Setting) </a> </h3>
     <p>
-        In the routing, the element where the components started to be rendered must be specified, for this,
-        the <i class="note mark-el">route-view</i> directive is used, and in the definition of the components,
-        some additional specific properties for the routing are defined, which are:
+        No roteamento, o elemento onde os components começam a ser renderizados deve ser especificado, para isso, a
+        directiva/atributo <i class="note mark-el">route-view</i> é usado, e na definição dos components algumas
+        propriedades específicas para o roteamento devem definidas, que são:
     </p>
 
     <div e-ignore class="code-container" code-ext=".js">
@@ -39,33 +40,34 @@
     </div>
 
     <ul>
-        <li> <span class="note mark-el">config.base</span> &ndash; used to define the base URI of the project.
-            e.g.: www.domain.com<span class="mark-el">/my-project/</span>index.html. The default value is
-            <span class="note mark-el">/</span>, meaning that the project is at the root folder.
+        <li> <span class="note mark-el">config.base</span> &ndash; usado para definidar a URI base do projecto.
+            exemplo: www.dominio.com<span class="mark-el">/meu-projecto/</span>index.html. O valor padrão é <span
+                class="note mark-el">/</span>, significando que é a pasta raiz do projecto.
         </li>
 
-        <li> <span class="note mark-el">config.usehash</span> &ndash; used to allow page navegation
-            based on hash. The default value is <span class="note mark-el">true</span>.
+        <li> <span class="note mark-el">config.usehash</span> &ndash; usado para permitir a navegação baseado em hash
+            (#). O valor padrão é <span class="note mark-el">true</span>.
         </li>
         <li>
-            At this point we are going to assume that you already know what's component nameId is.
+            Até este ponto vamos assumir que você já tem conhecimento do que o quê é 'nameId'.
         </li>
-        <li> <span class="note mark-el">nameId.title</span> &ndash; represents the title that will be
-            setted to the page after the component has been added to the DOM (It is optional).</li>
+        <li> <span class="note mark-el">nameId.title</span> &ndash; representa o título que será configurado quando o
+            component for a adicionado renderizado (É opcional).</li>
 
-        <li> <span class="note mark-el">nameId.route</span> &ndash; represents the route that
-            will be setted to the page after the component has been added to the DOM (It is
-            optional). </li>
+        <li> <span class="note mark-el">nameId.route</span> &ndash; representa a rota de navegação (É obrigatório no
+            tópico de roteamento). </li>
 
-        <li> <span class="note mark-el">nameId.isDefault</span> &ndash; set the compoment as the default
-            route of the app.</li>
+        <li> <span class="note mark-el">nameId.isDefault</span> &ndash; configura o componente como a rota padrão da
+            aplicação.</li>
 
-        <li> <span class="note mark-el">nameId.isNotFound</span> &ndash; set the compoment as the not found
-            route of the app.</li>
+        <li> <span class="note mark-el">nameId.isNotFound</span> &ndash; configura o componente como a rota `not found
+            (404)` da aplicação.</li>
 
-        <li> <span class="note mark-el">nameId.children</span> &ndash; represents the children of this compoment.</li>
-        
-        <li> <span class="note mark-el">nameId.keepAlive</span> &ndash; allow the component to keep alive the old state.</li>
+        <li> <span class="note mark-el">nameId.children</span> &ndash; representa os filhos deste componente.</li>
+
+        <li> <span class="note mark-el">nameId.keepAlive</span> &ndash; perminet manter vivo o estado antigo do
+            componente.
+        </li>
     </ul>
 
     <label>HTML</label>
@@ -103,59 +105,62 @@
     </div>
 
     <p>
-        Whenever routing is used, it is mandatory to define the standard route (standard component)
-        so that it can be loaded immediately. To do so, just set the
-        <i class="note mark-el">isDefault:true</i> property in the component registering.
+        Sempre que se estiver a usar o roteamento, é obrigatório definir a rota padrão para que seja carregado
+        imediatamente. Para isso, configura a propriedade <i class="note mark-el">isDefault:true</i> no componente
+        registrado.
     </p>
 
     <p>
-        In the case of page <b>404</b>, we can set the <i class="note mark-el">isNotFound:true</i> property,
-        telling Easy that if there is no component with this route, insert this page.
+        No caso da página <b>404</b>, podemos configurar a propriedade <i class="note mark-el">isNotFound:true</i>,
+        dizendo ao Easy que, se por acaso não encontrar nenhum componente com esta rota, insere este componente.
     </p>
 
     <div class="block-note dont">
         <p>
-            Two or more components cannot be defined with with <i class="note">isDefault</i> or
-            <i class="note">isNotFound</i>, if you do, an error will be thrown in saying
-            `<i class="color-red">It is not allowed to define more than one 'default'/'notFound' page...</i>`.
+            Dois ou mais componentes não podem ser definidos com a propriedade <i class="note">isDefault</i> ou
+            <i class="note">isNotFound</i>, se for, um erro será lançado dizendo `<i class="color-red">It is not allowed
+                to define more than one 'default'/'notFound' page...</i>`.
+            <br><br>
+
+            <b>Tradução</b>: <i class="color-red">Não é permitido definir mais de uma página 'default'/'notFound'.</i>
         </p>
     </div>
 
-    <h3> <a id="routing_navegation"> Navegation </a> </h3>
+    <h3> <a id="routing_navegation"> Navegação (Navegation) </a> </h3>
     <p>
-        Navigation between pages is done using the tag element <i class="note mark-el">a</i> but with
-        the attribute <i class="note mark-el">:href</i> or <i class="note mark-el">i:href</i>,
-        it can also be done with <i class="note">href</i> but we do not recommend using it, we
-        will describe the behavior of each one.
+        A navegação entre páginas é feito com a tag <i class="note mark-el">a</i> mas com o atributo <i
+            class="note mark-el">:href</i> ou <i class="note mark-el">i:href</i>, também pode ser feito com <i
+            class="note">href</i> mas não é recomendado usá-lo, iremos descrever o comportamento de cada um deles.
     </p>
 
     <p>
-        Both <i class="note mark-el">:href</i> and <i class="note mark-el">i:href</i> when defined create the
-        href attribute combining it with <i class="note mark-el">config.base</i>, whenever it is clicked,
-        the default anchor action is prevented.
+        Ambos <i class="note mark-el">:href</i> e <i class="note mark-el">i:href</i> qunado definidos criam o atributo
+        `href` combinando com <i class="note mark-el">config.base</i>, e sempre que é clicado, a ação padrão da âncora é
+        previnido.
     </p>
 
     <p>
-        The difference between them is that using the <i class="note mark-el">:href</i> attribute, the
-        <i class="note mark-el">active-link</i> class is added to the element when it is clicked, in the
-        other hand, using <i class="note mark-el">i:href</i>, the addition of the class is ignored.
+        A diferença entre eles é que, usando o atributo <i class="note mark-el">:href</i>, a classe <i
+            class="note mark-el">active-link</i> é adicionada no elemento que foi clicado, e usando o <i
+            class="note mark-el">i:href</i>, a adição da classe é ignorada.
     </p>
 
     <div e-ignore class="code-container" code-ext=".html">
         <textarea cm-lang="text/html">
-    <!-- config.base='/my-project/' -->
+    <!-- config.base='/meu-projecto/' -->
 
-    <!-- Defined (Not Compiled) -->
+    <!-- Definido (Não Compilado) -->
     <a :href="/home"> Home </a>
     
-    <!-- Compiled -->
-    <a href="/my-project/home"> Home </a></textarea>
+    <!-- Compilado -->
+    <a href="/meu-projecto/home"> Home </a></textarea>
     </div>
 
-    <h3> <a id="routing_nesting"> Nesting Routes </a> </h3>
+    <h3> <a id="routing_nesting"> Aninhando Rotas (Nesting Routes) </a> </h3>
     <p>
-        Children can be added to each component, this in the children property, and so we can nest routes...
-        The property expects an component element object having the child's nameId and its object.
+        Filhos podem ser adicionados para cada componente, isto em uma propriedade `children`, e também podemos aninhar
+        rotas...
+        A propridade espera um objecto de component (components.elements) tendo o `nameId` do filho e o objecto.
     </p>
 
     <div e-ignore class="code-container" code-ext=".js">
@@ -165,17 +170,17 @@
             elements: {
                 'user' : {
                     url: '/pages/user',
-                    title : 'User Profile',
+                    title : 'Perfil do Usuário',
                     route : '/user/:id',
                     children: {
                         'user-posts': {
                             url: '/pages/user-posts',
-                            title : 'Your Posts',
+                            title : 'Suas Postagens',
                             route : '/posts'
                         },
                         'user-about': {
                             url: '/pages/user-about',
-                            title : 'About You',
+                            title : 'Acerca de ti',
                             route : '/about'
                         }
                     }
@@ -187,23 +192,23 @@
 
     <div class="block-note info">
         <p>
-            Note that in the children route we only put <i class="note mark-el">/childRouteName</i>, because after
-            it registered it will became <i class="note mark-el">/parentRouteName/childRouteName</i>. <br>
-            The nesting the has not limit, meaning that we can also nest in a child.
+            Note que na rota do filho, pusemos apenas <i class="note mark-el">/nomeRotaFilho</i>, porque depois de ser
+            registrado vai se tornar <i class="note mark-el">/nomeRotaPai/nomeRotaFilho</i>. <br> O aninhamento não tem
+            limite, significando que também podemos aninhar dentro do filho.
         </p>
     </div>
 
-    <h3> <a id="routing_params"> Route Params </a> </h3>
+    <h3> <a id="routing_params"> Parâmetros nas Rotas (Route Params) </a> </h3>
     <p>
-        To define a parameter on the route, we use: paramName and to extract the data of the route's parameters,
-        we use <i class="note mark-el">this.getParams()</i> in the component instance, returning an object
-        containing all the parameters of the route.
+        Para definir parâmetro na rota, usamos `:nomeParametro` e para extrair dados do parametro da rota, usamos <i
+            class="note mark-el">this.getParams()</i> na instânica do componente, retornando um objecto com todos os
+        parametros da rota.
     </p>
 
     <div e-ignore class="code-container" code-ext=".html">
         <textarea cm-lang="text/html">
     <div>
-        <!-- Compoment Content -->
+        <!-- Conteúdo do Componente -->
     </div>
     <script>
         this.loaded = function (el) {
@@ -212,28 +217,30 @@
     </script></textarea>
     </div>
 
-    <h3> <a id="routing_pretty_url"> HTML5 Mode / Pretty URL </a> </h3>
+    <h3> <a id="routing_pretty_url"> Modo HTML5 / URL Bonitas </a> </h3>
     <p>
-        The default navegation mode is hash mode, which uses a URL hash to navigate between pages without reloading it.
+        O modo padrão de navegação é o modo hash (#), que usa o hash na URL para navegar entre as páginas em recarregar
+        a mesma.
     </p>
 
     <p>
-        To navegate without using the URL hash, there are a few steps that must be followed, which are:
+        Para sem usar a hash na URL, há alguns passos que devem ser seguido, que são:
     </p>
 
     <ol>
-        <li> Disable the <i class="note mark-el">config.usehash</i> &ndash; setting to <i class="mark-el">false</i> it
-            make that no hash will be added the navegation anchors. </li>
+        <li> Desative o <i class="note mark-el">config.usehash</i> &ndash; configurando para <i
+                class="mark-el">false</i> isto fará com que o hash não seja adicionado nas âncoras de navegação. </li>
 
-        <li> Add the <i class="note mark-el">base</i> tag in the page head &ndash; the base need to be added with the
-            same value as compoment <i class="note">config.base</i>. That specify the base URL to use for all relative
-            URLs in a document.
+        <li> Adicione a tag <i class="note mark-el">base</i> no head da sua página &ndash; a base precisa ser adicionada
+            com o mesmo valor que <i class="note">config.base</i> da configuração de componentes. Que vai especificar a
+            URL base para usar em todos as URL relativa no documento (DOM).
             <a class="mark-el" href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base" target="_blank"
-                rel="noopener noreferrer">Click me for more base tag info</a>. </li>
+                rel="noopener noreferrer">Clique em mim para saber mais sobre a tag base</a>. </li>
 
-        <li> Configure the server to return <i class="note mark-el">index.html</i> if the URL doesn't match any static
-            assets &ndash; as the application only runs in one page `the index` we need only to tell the server to
-            return this file allowing the <i class="note mark-el">easy.js</i> handling the navegation in the front-end.
+        <li> Configure o retorno no servidor para ser <i class="note mark-el">index.html</i> se a URL não coincide com
+            algum ficheiro estático &ndash; já que a aplicação corre em uma só página o `index`, precisamos dizer ao
+            servidor retornar este ficheiro, permitindo que o <i class="note mark-el">easy.js</i> lide com a navegação
+            no front-end.
         </li>
     </ol>
 
@@ -259,22 +266,22 @@
     });</textarea>
     </div>
 
-    <h3> Apache Configuration Example </h3>
+    <h3> Exemplo de Configuração no Apache </h3>
     <div e-ignore class="code-container" code-ext=".htcaccess">
         <textarea cm-lang="powershell">
     RewriteEngine On
     
-    # Setting the base path of the project
+    # Configurando a rota base do projecto
     RewriteBase /
 
-    # Return the index.html file if the request is this 
+    # Retorne o ficheiro index.html se a requisição é esta 
     RewriteRule ^index\.html$ - [L]
 
-    # If the request file name is not a directory
+    # Se o ficheiro requisitado não é uma pasta
     RewriteCond %{REQUEST_FILENAME} !-d
-    # If the request file name is not a file
+    # Se o ficheiro requisitado não é um ficheiro
     RewriteCond %{REQUEST_FILENAME} !-f
-    # Return the index.html file 
+    # Retorne o ficheiro index.html 
     RewriteRule . index.html [L]</textarea>
     </div>
 
