Documentation updated and language detector added on the website

--- a/docs/components/doc-sections/en/installation.html
+++ b/docs/components/doc-sections/en/installation.html
@@ -27,7 +27,7 @@
 
     <h3> <a id="install_cdn"> CDN </a> </h3>
     <p>
-        Using <a href="https://www.cloudflare.com/learning/cdn/what-is-a-cdn/" target="_blank" class="mark-a"
+        Using <a href="https://www.cloudflare.com/learning/cdn/what-is-a-cdn/" target="_blank" class="mark-el"
             rel="noopener noreferrer">CDN</a>
         is a little bit simpler because the only thing that must be done is to import it
     </p>
