--- a/docs/components/doc-sections/pt/installation.html
+++ b/docs/components/doc-sections/pt/installation.html
@@ -27,7 +27,7 @@
 
     <h3> <a id="install_cdn"> CDN </a> </h3>
     <p>
-        Usando <a href="https://www.cloudflare.com/learning/cdn/what-is-a-cdn/" target="_blank" class="mark-a"
+        Usando <a href="https://www.cloudflare.com/learning/cdn/what-is-a-cdn/" target="_blank" class="mark-el"
             rel="noopener noreferrer">CDN</a> é um pouco mais simples porque a única coisa que deve ser feita é
         importá-lo e está feito.
     </p>
