--- a/docs/components/doc-sections/pt/instance.html
+++ b/docs/components/doc-sections/pt/instance.html
@@ -97,7 +97,7 @@
 
     <h3> <a id="prop_data">Data</a> </h3>
     <p>
-        Como já mencionado, a propriedade data permite definir os dados que o aplicativo terá ao iniciar, porém existe
+        Como já mencionado, a propriedade data permite definir os dados que a aplicação terá ao iniciar, porém existe
         uma maneira de adicionar dados enquanto ele já está em execução com o método <span class="note">
             app.setData(...) </span>. (Falaremos sobre isso na secção <a href="docs.html?load=sctn3#methods"
             class=" mark-el"> métodos </a>).<br>
