--- a/docs/components/doc-sections/pt/intro-tutorial.html
+++ b/docs/components/doc-sections/pt/intro-tutorial.html
@@ -12,9 +12,8 @@
     <p>
         É uma biblioteca muito fácil de pegar, com um comando simples para ver os resultados na tela, é totalmente
         voltada para o desenvolvimento front-end, pode ser usada para criar toda a aplicação como em partes específicas
-        dela. Também é bom na construção de aplicativos de página única (SPA - Single Page Application), pois tem o
-        conceito
-        de componentes da web.
+        dela. Também é bom na construção de aplicação de página única (SPA - Single Page Application), pois tem o
+        conceito de componentes da web.
     </p>
 
     <h3> Sem Virtual DOM? 🤔 </h3>
@@ -63,7 +62,7 @@
 
     <h3> Escala de Projectos </h3>
     <p>
-        Um aplicativo da web totalmente desenvolvido com easy.js foi testado apenas com pequenos projetos, projetos
+        Uma aplicação web totalmente desenvolvido com easy.js foi testado apenas com pequenos projetos, projetos
         maiores ainda não foram testados.
     </p>
 
