--- a/docs/components/doc-sections/pt/introduction.html
+++ b/docs/components/doc-sections/pt/introduction.html
@@ -18,7 +18,7 @@
         Como o nome diz, é uma biblioteca javascript realmente fácil de usar que fornece a você uma maneira simples de
         interagir com o seu HTML usando propriedades reactivas, dados em escopo no HTML, componentes reutilizáveis
         escritos em HTML puro, chamadas de API usando apenas atributos, e assim por diante... É muito bom e simples
-        construir um aplicativo de página única (SPA - Single Page Application). Nenhum DOM Virtual é usado, ele usa o
+        construir uma aplicação de página única (SPA - Single Page Application). Nenhum DOM Virtual é usado, ele usa o
         DOM Real para lidar com todas as alterações de dados.
     </p>
 
@@ -31,7 +31,7 @@
 
     <h3> <a id="scale"> Escala de Projectos </a> </h3>
     <p>
-        Um aplicativo da web totalmente desenvolvido com easy.js foi testado apenas com pequenos projetos, projetos
+        Uma aplicação web totalmente desenvolvido com easy.js foi testado apenas com pequenos projetos, projetos
         maiores ainda não foram testados.
     </p>
 
