--- a/docs/components/views/pt/main.html
+++ b/docs/components/views/pt/main.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="body">
                     <p>
-                        O Easy dá a você a oportunidade de reutilizar elementos já definidos no aplicativo, como se
+                        O Easy dá a você a oportunidade de reutilizar elementos já definidos na aplicação, como se
                         fosse um copiar e colar.
                     </p>
                 </div>
