--- a/docs/components/editor.html
+++ b/docs/components/editor.html
@@ -268,11 +268,12 @@
                         // Modifieng the console methods
                         $$refs.keys(function (key, v) {
                             contentWindow.console[key] = function (info, value) {
+                                console.log(arguments);
                                 var $value = '';
                                 if (!value) {
                                     $value = info;
                                 } else {
-                                    $value = value.toString() || value.msg;
+                                    $value = value.toString() || value.msg || value.message || 'One or more errors occurred';
                                 }
 
                                 instance.console.add({
